[package]
name = "eth_scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers-signers = "2.0.4"
num_cpus = "1.15.0"
rand = "0.8.5"
reqwest = { version = "0.11.17", features = ["json"] }
tokio = { version = "1.28.1", features = ["full"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
